# movo_project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/2d_nav/: costmap_common_params.yaml
launch/demo/: demo.launch  demo_show_basic.launch
launch/init/: init_sim_inplace.xml
launch/nav/: assisted_teleop.launch  map_nav.launch  mapping.launch  move_base.launch  sensor_nav.launch
launch/robot/: robot_assisted_teleop.launch  robot_demo.launch  robot_map_nav.launch  robot_mapping.launch  robot_sensor_nav.launch  robot_teleop.launch  tuck_robot.launch
launch/sim/: sim_assisted_teleop.launch  sim_demo.launch  sim_demo_show_basic.launch  sim_map_nav.launch  sim_mapping.launch  sim_sensor_nav.launch
models/cube/: model.config  model.sdf
scripts/: demo_show_basic_loop.py  init_sim_inplace  inplace_pick_place_demo.py
src/: object_support_segmentation.cpp
